Proper README, updated page metadata

--- a/index.html
+++ b/index.html
@@ -2,7 +2,17 @@
 <html>
 	<head>
 		<meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no, width=device-width, minimal-ui">
+
+		<meta property="og:title" content="Vlog Radio">
+		<meta property="og:site_name" content="Vlog Radio">
+		<meta property="og:url" content="http://vlograd.io/">
+		<meta property="og:image" content="http://vlograd.io/images/thumb.png">
+		<meta property="og:description" content="Vlog Radio is a site showcasing the music used by Casey Neistat in his daily vlogs.">
+
+		<title>Vlog Radio</title>
+
 		<link rel="stylesheet" type="text/css" href="./style.css">
+
 		<script src="//w.soundcloud.com/player/api.js"></script>
 		<script src="./main.js"></script>
 	</head>
